@@ -146,7 +146,6 @@ Seria: error message: igual que hay ahora. Y luego clases: 0001 out of memory. 0
 
 -quiza obtener mas info en descargas speccy online: autor, tamaño archivo, etc
 
--icono zx desktop para zx evo (tsconf, baseconf)
 
 -pid de ventana creo que deberia incrementarse siempre. ahora si cierras y abres una ventana continuamente, usa mismo pid, porque siempre busca el ultimo disponible. quiza al cerrarse una ventana deberia incrementarse en 1? o no?
 
