@@ -5,6 +5,7 @@ This is a special edition. Version is called "X" (actually is 10.10)
 Added Docker support
 Added screen previews of directories and compressed files
 Added flash support on screen previews
+Added ZX Desktop icons for TSConf, Baseconf
 
 
 Version 10.3 - La Abadia del Crimen edition. 10 May 2023
